# VaultAgent

./: .gitignore  Cargo.toml  README.md  Readme.md  agents.md  deploy.sh  setup.sh
configs/: default.toml
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
data/host/: constitution.md
vaultagent/: .env.docker.example  .env.secure.example  .env_example  Cargo.toml  Dockerfile.worker  docker-compose.yml  trusted_chat_ids.md
vaultagent/cron/: jobs.json
vaultagent/skills/: current_datetime.py
vaultagent/soul/: MEMORY.md  personality.md
vaultagent/soul/memory/: 2026-02-20.md
vaultagent/src/: main.rs  worker.rs
vaultagent/src/com/: telegram.rs
vaultagent/src/cron/: mod.rs  scheduler.rs  store.rs
vaultagent/src/gateway/: IncomingActionsQueue.rs  mod.rs
vaultagent/src/gateway/com/: mod.rs  telegram.rs  website.css  website.html  website.rs
vaultagent/src/gateway/com/telegram/: format.rs  telegram.rs
vaultagent/src/gateway/com/website/: website.css  website.html  website.js  website.rs
vaultagent/src/reasoning/: agent.rs  llm_interface.rs  mod.rs  transcription.rs  usage.rs
vaultagent/src/reasoning/llmApis/: anthropic.rs  mod.rs  multi_provider.rs  openAI.rs
vaultagent/src/skills/: mod.rs  python_skill.rs  read_file.rs  write_file.rs
vaultagent/src/skills/default_skills/: cron_add.rs  cron_list.rs  cron_remove.rs  email_mailbox.rs  extract_pdf.rs  file_copy.rs  file_store.rs  github.rs  http_utils.rs  list_directory.rs  memory_get.rs  memory_save.rs  memory_search.rs  mod.rs  read_file.rs  research.rs  shell_execute.rs  spawn_subagent.rs  web_fetch.rs  web_search.rs  write_file.rs
vaultagent/src/soul/: memory.rs  mod.rs  onboarding_prompt.md  personality.rs
