[workspace]
members = [
  "crates/core",
  "crates/providers",
  "crates/tools",
  "crates/policy",
  "crates/audit",
  "crates/cli",
  "crates/server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jakob"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
