[package]
name = "vaultagent"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
croner = "2"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "multipart",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
dotenvy = "0.15"
futures-util = "0.3.31"
uuid = { version = "1", features = ["v4"] }
