[package]
name = "vaultagent-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
url = "2"
vaultagent-audit = { path = "../audit" }
vaultagent-policy = { path = "../policy" }
vaultagent-tools = { path = "../tools" }
vaultagent-providers = { path = "../providers" }
